--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "sharp": "^0.34.5"
+    "sharp": "^0.34.5",
+    "stripe": "^20.2.0"
   }
 }
